--- a/02_lda_1.ipynb
+++ b/02_lda_1.ipynb
@@ -685,6 +685,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Alfred\\Anaconda3\\lib\\site-packages\\pyLDAvis\\_prepare.py:257: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
+      "of pandas will change to not sort by default.\n",
+      "\n",
+      "To accept the future behavior, pass 'sort=False'.\n",
+      "\n",
+      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
+      "\n",
+      "  return pd.concat([default_term_info] + list(topic_dfs))\n"
+     ]
+    }
+   ],
+   "source": [
+    "LDA_01 = pyLDAvis.gensim.prepare(ldamodel1, corpus, dictionary)\n",
+    "pyLDAvis.save_html(LDA_01, './viz/lda_01_raw.html')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 68,
    "metadata": {},
    "outputs": [],
