--- a/04_lda_03.ipynb
+++ b/04_lda_03.ipynb
@@ -1940,6 +1940,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Alfred\\Anaconda3\\lib\\site-packages\\pyLDAvis\\_prepare.py:257: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
+      "of pandas will change to not sort by default.\n",
+      "\n",
+      "To accept the future behavior, pass 'sort=False'.\n",
+      "\n",
+      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
+      "\n",
+      "  return pd.concat([default_term_info] + list(topic_dfs))\n"
+     ]
+    }
+   ],
+   "source": [
+    "#save visualisation of LDA model\n",
+    "LDA_fin = pyLDAvis.gensim.prepare(lda_saved, corpus_saved, dictionary_saved)\n",
+    "pyLDAvis.save_html(LDA_fin, './viz/lda_fin.html')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 203,
    "metadata": {},
    "outputs": [],
